crates/mabo-parser/tests/snapshots/parser__parse@types_generic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "struct Sample {\n    f1: Vec<u32> @1,\n    f2: HashMap<u32, String> @2,\n    f3: HashSet<u32> @3,\n    f4: Option<u32> @4,\n    f5: NonZero<u32> @5,\n}\n\nstruct SampleUnnamed(\n    Vec<u32> @1,\n    HashMap<u32, String> @2,\n    HashSet<u32> @3,\n    Option<u32> @4,\n    NonZero<u32> @5,\n)"
input_file: crates/mabo-parser/tests/inputs/types_generic.mabo
---
Schema {
    path: Some(
        "types_generic.mabo",
    ),
    source: "struct Sample {\n    f1: Vec<u32> @1,\n    f2: HashMap<u32, String> @2,\n    f3: HashSet<u32> @3,\n    f4: Option<u32> @4,\n    f5: NonZero<u32> @5,\n}\n\nstruct SampleUnnamed(\n    Vec<u32> @1,\n    HashMap<u32, String> @2,\n    HashSet<u32> @3,\n    Option<u32> @4,\n    NonZero<u32> @5,\n)\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f1",
                            },
                            ty: Type {
                                value: Vec(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f2",
                            },
                            ty: Type {
                                value: HashMap(
                                    (
                                        Type {
                                            value: U32,
                                        },
                                        Type {
                                            value: String,
                                        },
                                    ),
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 2,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f3",
                            },
                            ty: Type {
                                value: HashSet(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 3,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f4",
                            },
                            ty: Type {
                                value: Option(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 4,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f5",
                            },
                            ty: Type {
                                value: NonZero(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 5,
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "SampleUnnamed",
                },
                generics: Generics(
                    [],
                ),
                fields: Unnamed(
                    [
                        UnnamedField {
                            ty: Type {
                                value: Vec(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: HashMap(
                                    (
                                        Type {
                                            value: U32,
                                        },
                                        Type {
                                            value: String,
                                        },
                                    ),
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 2,
                                },
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: HashSet(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 3,
                                },
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: Option(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 4,
                                },
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: NonZero(
                                    Type {
                                        value: U32,
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 5,
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
