crates/mabo-parser/tests/snapshots/parser__parse@types_nested.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "struct Sample {\n    value: Vec<Option<NonZero<HashMap<i64, Box<String>>>>> @1,\n}"
input_file: crates/mabo-parser/tests/inputs/types_nested.mabo
---
Schema {
    path: Some(
        "types_nested.mabo",
    ),
    source: "struct Sample {\n    value: Vec<Option<NonZero<HashMap<i64, Box<String>>>>> @1,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "value",
                            },
                            ty: Type {
                                value: Vec(
                                    Type {
                                        value: Option(
                                            Type {
                                                value: NonZero(
                                                    Type {
                                                        value: HashMap(
                                                            (
                                                                Type {
                                                                    value: I64,
                                                                },
                                                                Type {
                                                                    value: BoxString,
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
