crates/mabo-parser/tests/snapshots/parser__print@attributes.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "#[deprecated = \"don't use\", compress]\n#[validate(\n    in_range(min = 100, max = 200),\n    non_empty,\n)]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attributes.mabo
---
#[deprecated = "don't use", compress, validate(in_range(min = 100, max = 200), non_empty)]
struct Sample
