crates/mabo-parser/tests/snapshots/parser__print@const_string.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "const SIMPLE: String = \"value\";\n\nconst NEWLINE_ESCAPE: String = \"one \\\n    two \\\n    three\\\n\";\n\nconst ESCAPES: String = \"escape basics \\r\\n \\t \\b \\f \\\\ \\\"\\\n    hello\\\" \\n\\\n    unicode \\u{2764}  \\\n    emoji ❤ \\\n\";\n\nconst MULTILINE: String = \"a\n    b\n    c\n\";"
input_file: crates/mabo-parser/tests/inputs/const_string.mabo
---
const SIMPLE: String = "value";
const NEWLINE_ESCAPE: String = "one two three";
const ESCAPES: String = "escape basics \r\n \t \u{8} \u{c} \\ \"hello\" \nunicode ❤  emoji ❤ ";
const MULTILINE: String = "a\n    b\n    c\n";

