crates/mabo-parser/tests/snapshots/parser__print@enum_generics.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Enum with generics.\nenum Sample<A, B, C, D> {\n    One @1,\n    Two(A @1, B @2) @2,\n    Three {\n        field1: C @1,\n        field2: D @2,\n    } @3,\n}"
input_file: crates/mabo-parser/tests/inputs/enum_generics.mabo
---
/// Enum with generics.
enum Sample<A, B, C, D> {
    One @1,
    Two(A @1, B @2) @2,
    Three {
        field1: C @1,
        field2: D @2,
    } @3,
}


