crates/mabo-parser/tests/snapshots/parser__print@enum_min_ws.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "enum Sample<T>{One@1,Two(u32@1,u64@2,T@3)@2,Three{field1:u32@1,field2:bool@2,field3:T@3}@3}"
input_file: crates/mabo-parser/tests/inputs/enum_min_ws.mabo
---
enum Sample<T> {
    One @1,
    Two(u32 @1, u64 @2, T @3) @2,
    Three {
        field1: u32 @1,
        field2: bool @2,
        field3: T @3
    } @3
}


