crates/mabo-parser/tests/snapshots/parser__print@module_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "mod a {\n    /// Inner module\n    mod b {\n        enum Sample {\n            One @1,\n        }\n    }\n\n    struct Sample {\n        value: u32 @1,\n        inner: b::Sample @2,\n    }\n}"
input_file: crates/mabo-parser/tests/inputs/module_basic.mabo
---
mod a {
    /// Inner module
    mod b {
        enum Sample {
            One @1,
        }
    }

    struct Sample {
        value: u32 @1,
        inner: b::Sample @2,
    }
}


